Fixed z-index and missing search icon issue with top right search

--- a/blocks/src/preheader-brand/style.scss
+++ b/blocks/src/preheader-brand/style.scss
@@ -143,7 +143,7 @@
         right: 0;
         top: 100%;
         padding: var(--wp--preset--spacing--40);
-        z-index: 1;
+        z-index: 10;
         visibility: visible;
         opacity: 1;
         transition: visibility 0s linear 0s, opacity 200ms;
